@@ -709,7 +709,6 @@ int kb::generate_nlp(expression *e, sequence *s, FILE *f)
       fprintf(f, "\n");
   }
 
-
   return VLAD_OK;
 }
 
@@ -762,22 +761,16 @@ int kb::evaluate_query(expression *e, sequence *s, unsigned char *r)
         for (i_sub = 0; i_sub < s_len; i_sub++) {
           for (i_acc = 0; i_acc < a_len + ag_len; i_acc++) {
             for (i_obj = 0; i_obj < o_len + og_len; i_obj++) {
-              unsigned int tmp_num;
-              numberlist *tmp_list;
+              unsigned int tmp_num1;
+              unsigned int tmp_num2;
+              unsigned int tmp_num3;
 
-              if ((tmp_list = VLAD_NEW(numberlist())) == NULL)
-                return VLAD_MALLOCFAILED;
+              tmp_num1 = (i * pos_tot * 2) + (i_truth ? pos_tot : 0) + (i_sub * (a_len + ag_len) * (o_len + og_len)) + (i_acc * (o_len + og_len)) + i_obj;
+              tmp_num2 = (i * pos_tot * 2) + (i_truth ? pos_tot : 0) + ((i_group + s_len) * (a_len + ag_len) * (o_len + og_len)) + (i_acc * (o_len + og_len)) + i_obj;
+              tmp_num3 = (i * pos_tot * 2) + pos_tot + h_tot + (i_sub * sg_len) + i_group;
 
-              tmp_num = (i * pos_tot * 2) + (i_truth ? pos_tot : 0) + (i_sub * (a_len + ag_len) * (o_len + og_len)) + (i_acc * (o_len + og_len)) + i_obj;
-              tmp_list->add((i * pos_tot * 2) + (i_truth ? pos_tot : 0) + ((i_group + s_len) * (a_len + ag_len) * (o_len + og_len)) + (i_acc * (o_len + og_len)) + i_obj);
-              tmp_list->add((i * pos_tot * 2) + pos_tot + h_tot + (i_sub * sg_len) + i_group);
-
-              if ((retval = wrap->add_rule_single_head(tmp_num, tmp_list, NULL)) != VLAD_OK) {
-                delete tmp_list;
+              if ((retval = wrap->add_rule_shead_sbody(tmp_num1, tmp_num2, tmp_num3)) != VLAD_OK)
                 return retval;
-              }
-
-              delete tmp_list;
             }
           }
         }
@@ -787,22 +780,16 @@ int kb::evaluate_query(expression *e, sequence *s, unsigned char *r)
         for (i_sub = 0; i_sub < s_len + sg_len; i_sub++) {
           for (i_acc = 0; i_acc < a_len; i_acc++) {
             for (i_obj = 0; i_obj < o_len + og_len; i_obj++) {
-              unsigned int tmp_num;
-              numberlist *tmp_list;
+              unsigned int tmp_num1;
+              unsigned int tmp_num2;
+              unsigned int tmp_num3;
 
-              if ((tmp_list = VLAD_NEW(numberlist())) == NULL)
-                return VLAD_MALLOCFAILED;
+              tmp_num1 = (i * pos_tot * 2) + (i_truth ? pos_tot : 0) + (i_sub * (a_len + ag_len) * (o_len + og_len)) + (i_acc * (o_len + og_len)) + i_obj;
+              tmp_num2 = (i * pos_tot * 2) + (i_truth ? pos_tot : 0) + (i_sub * (a_len + ag_len) * (o_len + og_len)) + ((i_group + a_len) * (o_len + og_len)) + i_obj;
+              tmp_num3 = (i * pos_tot * 2) + pos_tot + h_tot + (sg_len * sg_len) + (i_acc * sg_len) + i_group;
 
-              tmp_num = (i * pos_tot * 2) + (i_truth ? pos_tot : 0) + (i_sub * (a_len + ag_len) * (o_len + og_len)) + (i_acc * (o_len + og_len)) + i_obj;
-              tmp_list->add((i * pos_tot * 2) + (i_truth ? pos_tot : 0) + (i_sub * (a_len + ag_len) * (o_len + og_len)) + ((i_group + a_len) * (o_len + og_len)) + i_obj);
-              tmp_list->add((i * pos_tot * 2) + pos_tot + h_tot + (sg_len * sg_len) + (i_acc * sg_len) + i_group);
-
-              if ((retval = wrap->add_rule_single_head(tmp_num, tmp_list, NULL)) != VLAD_OK) {
-                delete tmp_list;
+              if ((retval = wrap->add_rule_shead_sbody(tmp_num1, tmp_num2, tmp_num3)) != VLAD_OK)
                 return retval;
-              }
-
-              delete tmp_list;
             }
           }
         }
@@ -812,27 +799,272 @@ int kb::evaluate_query(expression *e, sequence *s, unsigned char *r)
         for (i_sub = 0; i_sub < s_len + sg_len; i_sub++) {
           for (i_acc = 0; i_acc < a_len + ag_len; i_acc++) {
             for (i_obj = 0; i_obj < o_len; i_obj++) {
-              unsigned int tmp_num;
-              numberlist *tmp_list;
+              unsigned int tmp_num1;
+              unsigned int tmp_num2;
+              unsigned int tmp_num3;
 
-              if ((tmp_list = VLAD_NEW(numberlist())) == NULL)
-                return VLAD_MALLOCFAILED;
+              tmp_num1 = (i * pos_tot * 2) + (i_truth ? pos_tot : 0) + (i_sub * (a_len + ag_len) * (o_len + og_len)) + (i_acc * (o_len + og_len)) + i_obj;
+              tmp_num2 = (i * pos_tot * 2) + (i_truth ? pos_tot : 0) + (i_sub * (a_len + ag_len) * (o_len + og_len)) + (i_acc * (o_len + og_len)) + i_group + o_len;
+              tmp_num3 = (i * pos_tot * 2) + pos_tot + h_tot + (sg_len * sg_len) + (ag_len * ag_len) + (i_obj * og_len) + i_group;
 
-              tmp_num = (i * pos_tot * 2) + (i_truth ? pos_tot : 0) + (i_sub * (a_len + ag_len) * (o_len + og_len)) + (i_acc * (o_len + og_len)) + i_obj;
-              tmp_list->add((i * pos_tot * 2) + (i_truth ? pos_tot : 0) + (i_sub * (a_len + ag_len) * (o_len + og_len)) + (i_acc * (o_len + og_len)) + i_group + o_len);
-              tmp_list->add((i * pos_tot * 2) + pos_tot + h_tot + (sg_len * sg_len) + (ag_len * ag_len) + (i_obj * og_len) + i_group);
-
-              if ((retval = wrap->add_rule_single_head(tmp_num, tmp_list, NULL)) != VLAD_OK) {
-                delete tmp_list;
+              if ((retval = wrap->add_rule_shead_sbody(tmp_num1, tmp_num2, tmp_num3)) != VLAD_OK)
                 return retval;
-              }
-
-              delete tmp_list;
             }
           }
         }
       }
     }
+  }
+
+  /* transitivity */
+
+  /* state loop */
+  for (i = 0; i <= VLAD_LIST_LENGTH(s); i++) {
+    unsigned int i_grp1;
+    unsigned int i_grp2;
+    unsigned int i_grp3;
+    /* subject groups */
+    for (i_grp1 = 0; i_grp1 < sg_len; i_grp1++) {
+      for (i_grp2 = 0; i_grp2 < sg_len; i_grp2++) {
+        for (i_grp3 = 0; i_grp3 < sg_len; i_grp3++) {
+          unsigned int tmp_num1;
+          unsigned int tmp_num2;
+          unsigned int tmp_num3;
+
+          /* ignore if any 2 are the same */
+          if (i_grp1 == i_grp2 || i_grp1 == i_grp3 || i_grp2 == i_grp3)
+            continue;
+
+          tmp_num1 = (i * pos_tot * 2) + pos_tot + h_tot + m_tot + (i_grp1 * sg_len) + i_grp3;
+          tmp_num2 = (i * pos_tot * 2) + pos_tot + h_tot + m_tot + (i_grp1 * sg_len) + i_grp2;
+          tmp_num3 = (i * pos_tot * 2) + pos_tot + h_tot + m_tot + (i_grp2 * sg_len) + i_grp3;
+
+          if ((retval = wrap->add_rule_shead_sbody(tmp_num1, tmp_num2, tmp_num3)) != VLAD_OK)
+            return retval;
+        }
+      }
+    }
+    /* access groups */
+    for (i_grp1 = 0; i_grp1 < ag_len; i_grp1++) {
+      for (i_grp2 = 0; i_grp2 < ag_len; i_grp2++) {
+        for (i_grp3 = 0; i_grp3 < ag_len; i_grp3++) {
+          unsigned int tmp_num1;
+          unsigned int tmp_num2;
+          unsigned int tmp_num3;
+
+          /* ignore if any 2 are the same */
+          if (i_grp1 == i_grp2 || i_grp1 == i_grp3 || i_grp2 == i_grp3)
+            continue;
+
+          tmp_num1 = (i * pos_tot * 2) + pos_tot + h_tot + m_tot + (sg_len * sg_len) + (i_grp1 * sg_len) + i_grp3,
+          tmp_num2 = (i * pos_tot * 2) + pos_tot + h_tot + m_tot + (sg_len * sg_len) + (i_grp1 * sg_len) + i_grp2;
+          tmp_num3 = (i * pos_tot * 2) + pos_tot + h_tot + m_tot + (sg_len * sg_len) + (i_grp2 * sg_len) + i_grp3;
+
+          if ((retval = wrap->add_rule_shead_sbody(tmp_num1, tmp_num2, tmp_num3)) != VLAD_OK)
+            return retval;
+        }
+      }
+    }
+    /* object groups */
+    for (i_grp1 = 0; i_grp1 < og_len; i_grp1++) {
+      for (i_grp2 = 0; i_grp2 < og_len; i_grp2++) {
+        for (i_grp3 = 0; i_grp3 < og_len; i_grp3++) {
+          unsigned int tmp_num1;
+          unsigned int tmp_num2;
+          unsigned int tmp_num3;
+
+          /* ignore if any 2 are the same */
+          if (i_grp1 == i_grp2 || i_grp1 == i_grp3 || i_grp2 == i_grp3)
+            continue;
+
+          tmp_num1 = (i * pos_tot * 2) + pos_tot + h_tot + m_tot + (sg_len * sg_len) + (ag_len * ag_len) + (i_grp1 * sg_len) + i_grp3;
+          tmp_num2 = (i * pos_tot * 2) + pos_tot + h_tot + m_tot + (sg_len * sg_len) + (ag_len * ag_len) + (i_grp1 * sg_len) + i_grp2;
+          tmp_num3 = (i * pos_tot * 2) + pos_tot + h_tot + m_tot + (sg_len * sg_len) + (ag_len * ag_len) + (i_grp2 * sg_len) + i_grp3;
+
+          if ((retval = wrap->add_rule_shead_sbody(tmp_num1, tmp_num2, tmp_num3)) != VLAD_OK)
+            return retval;
+        }
+      }
+    }
+  }
+
+  /* complementary rules */
+
+  /* state loop */
+  for (i = 0; i <= VLAD_LIST_LENGTH(s); i++) {
+    unsigned int i_atom;
+    for (i_atom = 0; i_atom < pos_tot; i_atom++) {
+      numberlist *tmp_list;
+
+      if ((tmp_list = VLAD_NEW(numberlist())) == NULL)
+        return VLAD_MALLOCFAILED;
+
+      tmp_list->add((i * pos_tot * 2) + i_atom + pos_tot);
+      tmp_list->add((i * pos_tot * 2) + i_atom);
+
+      if ((retval = wrap->add_rule_chead_mbody(false, tmp_list, NULL)) != VLAD_OK)
+        return retval;
+
+      delete tmp_list;
+    }
+  }
+
+  /* inertial rules */
+
+  /* state loop */
+  for (i = 0; i < VLAD_LIST_LENGTH(s); i++) {
+    unsigned int i_atom;
+    for (i_atom = 0; i_atom < pos_tot; i_atom++) {
+      unsigned int tmp_num1;
+      unsigned int tmp_num2;
+      unsigned int tmp_num3;
+
+      tmp_num1 = ((i + 1) * pos_tot * 2) + i_atom + pos_tot;
+      tmp_num2 = (i * pos_tot * 2) + i_atom + pos_tot;
+      tmp_num3 = ((i + 1) * pos_tot * 2) + i_atom;
+
+      if ((retval = wrap->add_rule_shead_sbody(tmp_num1, tmp_num2, tmp_num3)) != VLAD_OK)
+        return retval;
+
+      tmp_num1 = ((i + 1) * pos_tot * 2) + i_atom;
+      tmp_num2 = (i * pos_tot * 2) + i_atom;
+      tmp_num3 = ((i + 1) * pos_tot * 2) + i_atom + pos_tot;
+
+      if ((retval = wrap->add_rule_shead_sbody(tmp_num1, tmp_num2, tmp_num3)) != VLAD_OK)
+        return retval;
+    }
+  }
+
+  /* initial state */
+
+  for (i = 0; i < VLAD_LIST_LENGTH(itable); i++) {
+    atom *tmp_atom;
+    unsigned int tmp_num;
+
+    if ((retval = itable->get(i, &tmp_atom)) != VLAD_OK)
+      return retval;
+    if ((retval = encode_atom(tmp_atom, 0, &tmp_num)) != VLAD_OK)
+      return retval;
+    if ((retval = wrap->add_rule_shead_cbody(tmp_num, true)) != VLAD_OK)
+      return retval;
+  }
+
+  /* constraints */
+
+  for (i = 0; i <= VLAD_LIST_LENGTH(s); i++) {
+    unsigned int  i_const;
+    unsigned int i_exp;
+
+    /* constraint loop */
+    for (i_const = 0; i_const < VLAD_LIST_LENGTH(ctable); i_const++) {
+      expression *tmp_e;
+      expression *tmp_c;
+      expression *tmp_n;
+      atom *tmp_atom;
+      unsigned int tmp_num;
+      numberlist *tmp_list1;
+      numberlist *tmp_list2;
+      numberlist *tmp_list3;
+
+      if ((tmp_list1 = VLAD_NEW(numberlist())) == NULL)
+        return VLAD_MALLOCFAILED;
+      if ((tmp_list2 = VLAD_NEW(numberlist())) == NULL)
+        return VLAD_MALLOCFAILED;
+      if ((tmp_list3 = VLAD_NEW(numberlist())) == NULL)
+        return VLAD_MALLOCFAILED;
+
+      if ((retval = ctable->get(i_const, &tmp_e, &tmp_c, &tmp_n)) != VLAD_OK)
+        return retval;
+
+      /* constaint expression */
+      for (i_exp = 0; i_exp < VLAD_LIST_LENGTH(tmp_e); i_exp++) {
+        if ((retval = tmp_e->get(i_exp, &tmp_atom)) != VLAD_OK)
+          return retval;
+        if ((retval = encode_atom(tmp_atom, i, &tmp_num)) != VLAD_OK)
+          return retval;
+        if ((retval = tmp_list1->add(tmp_num)) != VLAD_OK)
+          return retval;
+      }
+
+      /* constraint condition */
+      for (i_exp = 0; i_exp < VLAD_LIST_LENGTH(tmp_c); i_exp++) {
+        if ((retval = tmp_c->get(i_exp, &tmp_atom)) != VLAD_OK)
+          return retval;
+        if ((retval = encode_atom(tmp_atom, i, &tmp_num)) != VLAD_OK)
+          return retval;
+        if ((retval = tmp_list2->add(tmp_num)) != VLAD_OK)
+          return retval;
+      }
+
+      /* constraint negative condition */
+      for (i_exp = 0; i_exp < VLAD_LIST_LENGTH(tmp_n); i_exp++) {
+        if ((retval = tmp_n->get(i_exp, &tmp_atom)) != VLAD_OK)
+          return retval;
+        if ((retval = encode_atom(tmp_atom, i, &tmp_num)) != VLAD_OK)
+          return retval;
+        if ((retval = tmp_list3->add(tmp_num)) != VLAD_OK)
+          return retval;
+      }
+
+      if ((retval = wrap->add_rule_mhead_mbody(tmp_list1, tmp_list2, tmp_list3)) != VLAD_OK)
+        return retval;
+
+      delete tmp_list1;
+      delete tmp_list2;
+      delete tmp_list3;
+    }
+  }
+
+  /* transformation rules */
+
+  /* state loop */
+  for (i = 0; i < VLAD_LIST_LENGTH(s); i++) {
+    unsigned int i_exp;
+    char *tmp_name;
+    atom *tmp_atom;
+    unsigned int tmp_num;
+    stringlist *tmp_ilist = NULL;
+    expression *tmp_pre = NULL;
+    expression *tmp_post = NULL;
+    numberlist *tmp_list1;
+    numberlist *tmp_list2;
+
+   if ((tmp_list1 = VLAD_NEW(numberlist())) == NULL)
+     return VLAD_MALLOCFAILED;
+   if ((tmp_list2 = VLAD_NEW(numberlist())) == NULL)
+     return VLAD_MALLOCFAILED;
+
+    if ((retval = s->get(i, &tmp_name, &tmp_ilist)) != VLAD_OK)
+      return retval;
+
+    if ((retval = ttable->replace(tmp_name, tmp_ilist, &tmp_pre, &tmp_post)) != VLAD_OK)
+      return retval;
+
+    /* postcondition loop */
+    for (i_exp = 0; i_exp < VLAD_LIST_LENGTH(tmp_post); i_exp++) {
+      if ((retval = tmp_post->get(i_exp, &tmp_atom)) != VLAD_OK)
+        return retval;
+      if ((retval = encode_atom(tmp_atom, i + 1, &tmp_num)) != VLAD_OK)
+        return retval;
+      if ((retval = tmp_list1->add(tmp_num)) != VLAD_OK)
+        return retval;
+    }
+
+    /* precondition loop */
+    for (i_exp = 0; i_exp < VLAD_LIST_LENGTH(tmp_pre); i_exp++) {
+      if ((retval = tmp_pre->get(i_exp, &tmp_atom)) != VLAD_OK)
+        return retval;
+      if ((retval = encode_atom(tmp_atom, i, &tmp_num)) != VLAD_OK)
+        return retval;
+      if ((retval = tmp_list2->add(tmp_num)) != VLAD_OK)
+        return retval;
+    }
+
+    if ((retval = wrap->add_rule_mhead_mbody(tmp_list1, tmp_list2, NULL)) != VLAD_OK)
+      return retval;
+
+    delete tmp_list1;
+    delete tmp_list2;
   }
 
   *r = VLAD_RESULT_TRUE;
