@@ -80,8 +80,34 @@ int wrapper::add_atom(unsigned int a)
   return VLAD_OK;
 }
 
-/* add rule with constant head */
-int wrapper::add_rule_const_head(numberlist *pbody, numberlist *nbody, bool h)
+/* constant head & single body */
+int wrapper::add_rule_chead_sbody(bool h, unsigned int pb, unsigned int nb)
+{
+  char tmp_name[VLAD_MAXLEN_NUM];
+
+  if (!initialised)
+    return VLAD_UNINITIALISED;
+
+  pr_api->begin_rule(BASICRULE);
+
+  /* add head */
+  pr_api->add_head(pr_api->get_atom(VLAD_BOOL_STRING(h)));
+
+  /* now for the positive body */
+  sprintf(tmp_name, "%d", pb);
+  pr_api->add_body(pr_api->get_atom(tmp_name), true);
+
+  /* then the negative body */
+  sprintf(tmp_name, "%d", nb);
+  pr_api->add_body(pr_api->get_atom(tmp_name), false);
+
+  pr_api->end_rule();
+
+  return VLAD_OK;
+}
+
+/* constant head & multiple body */
+int wrapper::add_rule_chead_mbody(bool h, numberlist *pb, numberlist *nb)
 {
   int retval;
   unsigned int i;
@@ -97,8 +123,8 @@ int wrapper::add_rule_const_head(numberlist *pbody, numberlist *nbody, bool h)
   pr_api->add_head(pr_api->get_atom(VLAD_BOOL_STRING(h)));
 
   /* now for the positive body */
-  for (i = 0; i < VLAD_LIST_LENGTH(pbody); i++) {
-    if ((retval = pbody->get(i, &tmp_num)) != VLAD_OK)
+  for (i = 0; i < VLAD_LIST_LENGTH(pb); i++) {
+    if ((retval = pb->get(i, &tmp_num)) != VLAD_OK)
       return retval;
 
     sprintf(tmp_name, "%d", tmp_num);
@@ -106,8 +132,8 @@ int wrapper::add_rule_const_head(numberlist *pbody, numberlist *nbody, bool h)
   }
 
   /* then the negative body */
-  for (i = 0; i < VLAD_LIST_LENGTH(nbody); i++) {
-    if ((retval = nbody->get(i, &tmp_num)) != VLAD_OK)
+  for (i = 0; i < VLAD_LIST_LENGTH(nb); i++) {
+    if ((retval = nb->get(i, &tmp_num)) != VLAD_OK)
       return retval;
 
     sprintf(tmp_name, "%d", tmp_num);
@@ -119,8 +145,57 @@ int wrapper::add_rule_const_head(numberlist *pbody, numberlist *nbody, bool h)
   return VLAD_OK;
 }
 
-/* add rule with constant body */
-int wrapper::add_rule_const_body(numberlist *head, bool b)
+/* single head & constant body */
+int wrapper::add_rule_shead_cbody(unsigned int h, bool b)
+{
+  char tmp_name[VLAD_MAXLEN_NUM];
+
+  if (!initialised)
+    return VLAD_UNINITIALISED;
+
+  pr_api->begin_rule(BASICRULE);
+
+  /* add head */
+  sprintf(tmp_name, "%d", h);
+  pr_api->add_head(pr_api->get_atom(tmp_name));
+
+  /* now for the body */
+  pr_api->add_body(pr_api->get_atom(VLAD_BOOL_STRING(b)), true);
+
+  pr_api->end_rule();
+
+  return VLAD_OK;
+}
+
+/* single head & single body */
+int wrapper::add_rule_shead_sbody(unsigned int h, unsigned int pb, unsigned int nb)
+{
+  char tmp_name[VLAD_MAXLEN_NUM];
+
+  if (!initialised)
+    return VLAD_UNINITIALISED;
+
+  pr_api->begin_rule(BASICRULE);
+
+  /* add head */
+  sprintf(tmp_name, "%d", h);
+  pr_api->add_head(pr_api->get_atom(tmp_name));
+
+  /* now for the positive body */
+  sprintf(tmp_name, "%d", pb);
+  pr_api->add_body(pr_api->get_atom(tmp_name), true);
+
+  /* then the negative body */
+  sprintf(tmp_name, "%d", nb);
+  pr_api->add_body(pr_api->get_atom(tmp_name), false);
+
+  pr_api->end_rule();
+
+  return VLAD_OK;
+}
+
+/* single head & multiple body */
+int wrapper::add_rule_shead_mbody(unsigned int h, numberlist *pb, numberlist *nb)
 {
   int retval;
   unsigned int i;
@@ -133,8 +208,49 @@ int wrapper::add_rule_const_body(numberlist *head, bool b)
   pr_api->begin_rule(BASICRULE);
 
   /* add head */
-  for (i = 0; i < VLAD_LIST_LENGTH(head); i++) {
-    if ((retval = head->get(i, &tmp_num)) != VLAD_OK)
+  sprintf(tmp_name, "%d", h);
+  pr_api->add_body(pr_api->get_atom(tmp_name), true);
+
+  /* now for the positive body */
+  for (i = 0; i < VLAD_LIST_LENGTH(pb); i++) {
+    if ((retval = pb->get(i, &tmp_num)) != VLAD_OK)
+      return retval;
+
+    sprintf(tmp_name, "%d", tmp_num);
+    pr_api->add_body(pr_api->get_atom(tmp_name), true);
+  }
+
+  /* then the negative body */
+  for (i = 0; i < VLAD_LIST_LENGTH(nb); i++) {
+    if ((retval = nb->get(i, &tmp_num)) != VLAD_OK)
+      return retval;
+
+    sprintf(tmp_name, "%d", tmp_num);
+    pr_api->add_body(pr_api->get_atom(tmp_name), false);
+  }
+
+  pr_api->end_rule();
+
+  return VLAD_OK;
+
+}
+
+/* multiple head & constant body */
+int wrapper::add_rule_mhead_cbody(numberlist *h, bool b)
+{
+  int retval;
+  unsigned int i;
+  char tmp_name[VLAD_MAXLEN_NUM];
+  unsigned int tmp_num;
+
+  if (!initialised)
+    return VLAD_UNINITIALISED;
+
+  pr_api->begin_rule(CHOICERULE);
+
+  /* add head */
+  for (i = 0; i < VLAD_LIST_LENGTH(h); i++) {
+    if ((retval = h->get(i, &tmp_num)) != VLAD_OK)
       return retval;
 
     sprintf(tmp_name, "%d", tmp_num);
@@ -142,13 +258,14 @@ int wrapper::add_rule_const_body(numberlist *head, bool b)
   }
 
   pr_api->add_body(pr_api->get_atom(VLAD_BOOL_STRING(b)), true);
+
   pr_api->end_rule();
 
   return VLAD_OK;
 }
 
-/* add rule with a single head */
-int wrapper::add_rule_single_head(unsigned int head, numberlist *pbody, numberlist *nbody)
+/* multiple head & single body */
+int wrapper::add_rule_mhead_sbody(numberlist *h, unsigned int pb, unsigned int nb)
 {
   int retval;
   unsigned int i;
@@ -158,25 +275,65 @@ int wrapper::add_rule_single_head(unsigned int head, numberlist *pbody, numberli
   if (!initialised)
     return VLAD_UNINITIALISED;
 
-  pr_api->begin_rule(BASICRULE);
+  pr_api->begin_rule(CHOICERULE);
 
   /* add head */
-  sprintf(tmp_name, "%d", head);
-  pr_api->add_head(pr_api->get_atom(tmp_name));
+  for (i = 0; i < VLAD_LIST_LENGTH(h); i++) {
+    if ((retval = h->get(i, &tmp_num)) != VLAD_OK)
+      return retval;
 
-  /* add positive body */
-  for (i = 0; i < VLAD_LIST_LENGTH(pbody); i++) {
-    if ((retval = pbody->get(i, &tmp_num)) != VLAD_OK)
+    sprintf(tmp_name, "%d", tmp_num);
+    pr_api->add_head(pr_api->get_atom(tmp_name));
+  }
+
+  /* positive body */
+  sprintf(tmp_name, "%d", pb);
+  pr_api->add_body(pr_api->get_atom(tmp_name), true);
+
+  /* negative body */
+  sprintf(tmp_name, "%d", nb);
+  pr_api->add_body(pr_api->get_atom(tmp_name), false);
+
+  pr_api->end_rule();
+
+  return VLAD_OK;
+}
+
+/* multiple head & multiple body */
+int wrapper::add_rule_mhead_mbody(numberlist *h, numberlist *pb, numberlist *nb)
+{
+  int retval;
+  unsigned int i;
+  char tmp_name[VLAD_MAXLEN_NUM];
+  unsigned int tmp_num;
+
+  if (!initialised)
+    return VLAD_UNINITIALISED;
+
+  pr_api->begin_rule(CHOICERULE);
+
+  /* add head */
+  for (i = 0; i < VLAD_LIST_LENGTH(h); i++) {
+    if ((retval = h->get(i, &tmp_num)) != VLAD_OK)
+      return retval;
+
+    sprintf(tmp_name, "%d", tmp_num);
+    pr_api->add_head(pr_api->get_atom(tmp_name));
+  }
+
+  /* now for the positive body */
+  for (i = 0; i < VLAD_LIST_LENGTH(pb); i++) {
+    if ((retval = pb->get(i, &tmp_num)) != VLAD_OK)
       return retval;
 
     sprintf(tmp_name, "%d", tmp_num);
     pr_api->add_body(pr_api->get_atom(tmp_name), true);
   }
 
-  /* add negative body */
-  for (i = 0; i < VLAD_LIST_LENGTH(nbody); i++) {
-    if ((retval = nbody->get(i, &tmp_num)) != VLAD_OK)
-      return VLAD_OK;
+  /* then the negative body */
+  for (i = 0; i < VLAD_LIST_LENGTH(nb); i++) {
+    if ((retval = nb->get(i, &tmp_num)) != VLAD_OK)
+      return retval;
 
     sprintf(tmp_name, "%d", tmp_num);
     pr_api->add_body(pr_api->get_atom(tmp_name), false);
